# surround-view-segbev

./: .gitignore  CMakeLists.txt  NOTICE  README.md  package.xml  requirements.txt  setup.cfg  setup.py
configs/: bev_parameters.py  global_settings.py  nav2_params.yaml  pointcloud_to_laserscan_params.yaml  qos_profiles.py
configs/BEV/: bev_parameters.py  masks.npy  weights.npy
configs/cameras/: apply_webots_settings.py
configs/cameras/ZED_2/: webots_settings.yaml
configs/rviz/: mapping.rviz  navigation.rviz
configs/slam_toolbox/: mapper_params_online_async.yaml
docs/: README.md
launch/: cameras_calibration_launch.py  get_projection_matrices_launch.py  get_projection_weight_matrices_launch.py  mapping_launch.py  simulation_launch.py  surround_view_launch.py
models/YOLO11/: data.yaml
pointcloud_preprocessing/: CMakeLists.txt  package.xml
pointcloud_preprocessing/src/: async_pointcloud_merge_node.cpp
resource/descriptions/: EgoVehicle.urdf
resource/models/ZED_2/: ZED_2.step
resource/models/chessboard/: chessboard.dae
resource/protos/: PlasticBarrel.proto
resource/worlds/: .BEV.wbproj  .main.wbproj  .waltz.wbproj  BEV.wbt  main.wbt  waltz.wbt
resources/descriptions/: EgoVehicle.urdf
resources/worlds/: .main.wbproj  main.wbt
surround_view_segbev/: ackermann_keyboard_teleop_node.py  chessboards_controller_node.py  ego_vehicle_odometry_node.py  gps_path_planning_node.py  nav2_path_planning_node.py  pointcloud_to_laserscan_bridge_node.py  projection_matrices_node.py  projection_weight_matrices_node.py  surround_view_node.py
surround_view_segbev/configs/: pointcloud_to_laserscan_params.yaml  qos_profiles.py
surround_view_segbev/plugins/: EgoVehicleDriver.py
surround_view_segbev/scripts/: BirdsEyeView.py  CameraModel.py  PointSelectorGUI.py  data_shuffler.py  utils.py
(+37 files in other folders)
