<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pointcloud_preprocessing</name>
  <version>0.0.1</version>
  <description>No description</description>
  <maintainer email="molchanovlive@gmail.com">ghub-ayrtom</maintainer>
  <license>No license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
